@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2024-01-29T08:18:11Z",
+  "timestamp" : "2024-01-29T16:18:03Z",
   "count_outdated" : 1550,
   "uniques_outdated" : 849,
-  "count" : 1577,
+  "count" : 1578,
   "uniques" : 864,
   "clones" : [
     {
@@ -115,9 +115,9 @@
     },
     {
       "timestamp": "2024-01-29T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
+      "count_decinc": [ 0, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
